--- a/head/tailwindcss.html
+++ b/head/tailwindcss.html
@@ -1,7 +1,9 @@
+<!-- @format -->
+
 <!-- tailwind cdn -->
 <script src="https://unpkg.com/tailwindcss-jit-cdn"></script>
 <script type="module">
-    import tailwindcssTypography from "https://cdn.skypack.dev/@tailwindcss/typography"; window.tailwindConfig = { plugins: [tailwindcssTypography] }; window.tailwindCSS.refresh();
+    import tailwindcssTypography from 'https://cdn.skypack.dev/@tailwindcss/typography'; window.tailwindConfig = {plugins: [tailwindcssTypography]}; window.tailwindCSS.refresh();
 </script>
 
 <!-- custom tailwind configuration -->
