--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,51 @@
-<!-- @format -->
-
-<!DOCTYPE html>
-<html class="no-js" lang="en">
+<!doctype html>
+<html
+  class="no-js"
+  lang="en">
   <head>
     <meta charset="utf-8" />
     <title>dev.wind.jit</title>
     <!-- meta -->
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-    <meta name="theme-color" content="#fafafa" />
+    <meta
+      name="description"
+      content="" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1" />
+    <meta
+      property="og:title"
+      content="" />
+    <meta
+      property="og:type"
+      content="" />
+    <meta
+      property="og:url"
+      content="" />
+    <meta
+      property="og:image"
+      content="" />
+    <meta
+      name="theme-color"
+      content="#fafafa" />
     <!-- end:meta -->
 
     <!-- css:resets -->
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <link rel="stylesheet" href="../css/normalize.css" />
-    <link rel="stylesheet" href="../css/initial.css" />
+    <link
+      rel="stylesheet"
+      href="https://rsms.me/inter/inter.css" />
+    <link
+      rel="stylesheet"
+      href="css/normalize.css" />
+    <link
+      rel="stylesheet"
+      href="css/initial.css" />
     <!-- end:css:resets -->
 
     <!-- tailwind cdn -->
     <script src="https://unpkg.com/tailwindcss-jit-cdn"></script>
     <script type="module">
       import tailwindcssTypography from 'https://cdn.skypack.dev/@tailwindcss/typography';
-      window.tailwindConfig = {plugins: [tailwindcssTypography]};
+      window.tailwindConfig = { plugins: [tailwindcssTypography] };
       window.tailwindCSS.refresh();
     </script>
     <!-- end:tailwind cdn -->
@@ -48,7 +68,9 @@
 
   <body class="h-screen w-screen">
     <!-- shell -->
-    <main id="main" class="main">
+    <main
+      id="main"
+      class="main">
       <!-- application content here -->
       <div id="app">
         <!-- repository:name -->
@@ -56,9 +78,9 @@
           <div class="m-auto w-full max-w-screen-xl px-4 text-center md:px-4">
             <h2 class="text-elite-600 text-xl font-semibold">wind.jit®</h2>
             <p class="text-elite-600 mb-10 text-xs font-medium">src/index.html</p>
-            <p class="text-elite-600 font-mono text-xs font-medium"
-              >check the console to see if js is injected correctly.</p
-            >
+            <p class="text-elite-600 font-mono text-xs font-medium">
+              check the console to see if js is injected correctly.
+            </p>
           </div>
         </section>
         <!-- End repository:name -->
@@ -68,7 +90,7 @@
     <!-- end:shell -->
 
     <!-- scriptz -->
-    <script src="../js/app.js"></script>
+    <script src="js/app.js"></script>
     <!-- end:scriptz -->
   </body>
 </html>
