--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,5 @@
 <!doctype html>
-<html
-  class="no-js"
-  lang="en">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>dev.wind.jit</title>
@@ -35,10 +33,10 @@
       href="https://rsms.me/inter/inter.css" />
     <link
       rel="stylesheet"
-      href="css/normalize.css" />
+      href="./css/normalize.css" />
     <link
       rel="stylesheet"
-      href="css/initial.css" />
+      href="./css/initial.css" />
     <!-- end:css:resets -->
 
     <!-- tailwind cdn -->
@@ -90,7 +88,7 @@
     <!-- end:shell -->
 
     <!-- scriptz -->
-    <script src="js/app.js"></script>
+    <script src="./js/app.js"></script>
     <!-- end:scriptz -->
   </body>
 </html>
