--- a/src/index.html
+++ b/src/index.html
@@ -71,17 +71,67 @@
       class="main">
       <!-- application content here -->
       <div id="app">
-        <!-- repository:name -->
-        <section class="mx-auto w-full items-center justify-center pt-16">
-          <div class="m-auto w-full max-w-screen-xl px-4 text-center md:px-4">
-            <h2 class="text-elite-600 text-xl font-semibold">wind.jit®</h2>
-            <p class="text-elite-600 mb-10 text-xs font-medium">src/index.html</p>
-            <p class="text-elite-600 font-mono text-xs font-medium">
-              check the console to see if js is injected correctly.
-            </p>
+        <!-- Features Demo -->
+
+        <section class="bg-[#231F1F]">
+          <div class="mx-auto w-full max-w-7xl items-center px-5 py-24 md:px-12 lg:px-16">
+            <div>
+              <div class="max-w-2xl">
+                <h2 class="text-5xl font-bold tracking-tight text-white">MEMBERSHIP PERKS</h2>
+              </div>
+            </div>
+            <div class="mx-auto mt-12 w-full text-left">
+              <div class="relative m-auto items-center gap-12 md:order-first lg:inline-flex">
+                <div class="mx-auto lg:max-w-7xl">
+                  <ul
+                    role="list"
+                    class="grid list-none grid-cols-2 gap-4 md:grid-cols-3 lg:gap-12">
+                    <li>
+                      <div>
+                        <p class="mt-5 text-lg font-medium leading-6 text-white">→ Accountability</p>
+                      </div>
+                      <div class="mt-2 text-base text-gray-500">Our coaches are more motivated than your excuses!</div>
+                    </li>
+                    <li>
+                      <div>
+                        <p class="mt-5 text-lg font-medium leading-6 text-white">Train Anywhere</p>
+                      </div>
+                      <div class="mt-2 text-base text-gray-500">Use your membership at any ISI® location.</div>
+                    </li>
+                    <li>
+                      <div>
+                        <p class="mt-5 text-lg font-medium leading-6 text-white">Unlimited Sessions</p>
+                      </div>
+                      <div class="mt-2 text-base text-gray-500">
+                        Unlimited access to the most valuable 50 minute workout.
+                      </div>
+                    </li>
+                    <li>
+                      <div>
+                        <p class="mt-5 text-lg font-medium leading-6 text-white">InBody® Scans</p>
+                      </div>
+                      <div class="mt-2 text-base text-gray-500">Body fat analysis to track your progress.</div>
+                    </li>
+                    <li>
+                      <div>
+                        <p class="mt-5 text-lg font-medium leading-6 text-white">Month to Month</p>
+                      </div>
+                      <div class="mt-2 text-base text-gray-500">No annual contract required.</div>
+                    </li>
+                    <li>
+                      <div>
+                        <p class="mt-5 text-lg font-medium leading-6 text-white">Iron Kidz</p>
+                      </div>
+                      <div class="mt-2 text-base text-gray-500">Designated area for your child.</div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
-        <!-- End repository:name -->
+
+        <!-- End: Features Demo -->
       </div>
       <!-- bottom of app -->
     </main>
