--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,9 @@
       href="https://rsms.me/inter/inter.css" />
     <link
       rel="stylesheet"
+      href="./css/features.css" />
+    <link
+      rel="stylesheet"
       href="./css/normalize.css" />
     <link
       rel="stylesheet"
@@ -73,56 +76,37 @@
       <div id="app">
         <!-- Features Demo -->
 
-        <section class="bg-[#231F1F]">
-          <div class="mx-auto w-full max-w-7xl items-center px-5 py-24 md:px-12 lg:px-16">
-            <div>
-              <div class="max-w-2xl">
-                <h2 class="text-5xl font-bold tracking-tight text-white">MEMBERSHIP PERKS</h2>
-              </div>
+        <section
+          id="dynamic-features"
+          class="section-background">
+          <div class="section3container">
+            <div class="section3title">
+              <h2>FOUNDING MEMBER PERKS</h2>
             </div>
-            <div class="mx-auto mt-12 w-full text-left">
-              <div class="relative m-auto items-center gap-12 md:order-first lg:inline-flex">
-                <div class="mx-auto lg:max-w-7xl">
+
+            <div class="content-container">
+              <div class="flex-container">
+                <div class="">
                   <ul
                     role="list"
-                    class="grid list-none grid-cols-2 gap-4 md:grid-cols-3 lg:gap-12">
+                    class="section3list">
                     <li>
-                      <div>
-                        <p class="mt-5 text-lg font-medium leading-6 text-white">→ Accountability</p>
-                      </div>
-                      <div class="mt-2 text-base text-gray-500">Our coaches are more motivated than your excuses!</div>
-                    </li>
-                    <li>
-                      <div>
-                        <p class="mt-5 text-lg font-medium leading-6 text-white">Train Anywhere</p>
-                      </div>
-                      <div class="mt-2 text-base text-gray-500">Use your membership at any ISI® location.</div>
-                    </li>
-                    <li>
-                      <div>
-                        <p class="mt-5 text-lg font-medium leading-6 text-white">Unlimited Sessions</p>
-                      </div>
-                      <div class="mt-2 text-base text-gray-500">
-                        Unlimited access to the most valuable 50 minute workout.
+                      <h2 class="bullet font_2"><span style="color: #94e522">➔</span> &nbsp; ONE</h2>
+                      <div class="description font_8">
+                        <span>Our coaches are more motivated than your excuses!</span>
                       </div>
                     </li>
                     <li>
-                      <div>
-                        <p class="mt-5 text-lg font-medium leading-6 text-white">InBody® Scans</p>
+                      <h2 class="bullet font_2"><span style="color: #94e522">➔</span> &nbsp; ONE</h2>
+                      <div class="description font_8">
+                        <span>Our coaches are more motivated than your excuses!</span>
                       </div>
-                      <div class="mt-2 text-base text-gray-500">Body fat analysis to track your progress.</div>
                     </li>
                     <li>
-                      <div>
-                        <p class="mt-5 text-lg font-medium leading-6 text-white">Month to Month</p>
+                      <h2 class="bullet font_2"><span style="color: #94e522">➔</span> &nbsp; ONE</h2>
+                      <div class="description font_8">
+                        <span>Our coaches are more motivated than your excuses!</span>
                       </div>
-                      <div class="mt-2 text-base text-gray-500">No annual contract required.</div>
-                    </li>
-                    <li>
-                      <div>
-                        <p class="mt-5 text-lg font-medium leading-6 text-white">Iron Kidz</p>
-                      </div>
-                      <div class="mt-2 text-base text-gray-500">Designated area for your child.</div>
                     </li>
                   </ul>
                 </div>
